--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -39,6 +39,17 @@
 			<artifactId>json</artifactId>
 			<version>${org.json.wso2.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.wso2telco.dep</groupId>
+			<artifactId>oneapi-validation</artifactId>
+			<version>${com.wso2telco.dep.version}</version>
+		</dependency>
+		<dependency>
+               <groupId>com.google.code.gson</groupId>
+               <artifactId>gson</artifactId>
+               <version>${google.code.gson.version}</version>
+           </dependency>
 	</dependencies>
 
 	<properties>
@@ -46,6 +57,8 @@
 		<org.hibernate.version>5.1.0.Final</org.hibernate.version>
 		<com.googlecode.json-simple.wso2.version>1.1.wso2v1</com.googlecode.json-simple.wso2.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
+		<com.wso2telco.dep.version>1.8.0-SNAPSHOT</com.wso2telco.dep.version>
+		<google.code.gson.version>2.3.1</google.code.gson.version>
 		
 	</properties>
 
