--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -50,6 +50,17 @@
                <artifactId>gson</artifactId>
                <version>${google.code.gson.version}</version>
            </dependency>
+           		<dependency>
+			<groupId>com.googlecode.json-simple.wso2</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>${com.googlecode.json-simple.wso2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json.wso2</groupId>
+			<artifactId>json</artifactId>
+			<version>${org.json.wso2.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<properties>
@@ -59,6 +70,9 @@
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
 		<com.wso2telco.dep.version>1.8.0-SNAPSHOT</com.wso2telco.dep.version>
 		<google.code.gson.version>2.3.1</google.code.gson.version>
+		<com.googlecode.json-simple.wso2.version>1.1.wso2v1</com.googlecode.json-simple.wso2.version>
+		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
+		
 		
 	</properties>
 
