--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -39,18 +39,18 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.wso2telco.dep</groupId>
 			<artifactId>oneapi-validation</artifactId>
 			<version>${com.wso2telco.dep.version}</version>
 		</dependency>
 		<dependency>
-               <groupId>com.google.code.gson</groupId>
-               <artifactId>gson</artifactId>
-               <version>${google.code.gson.version}</version>
-           </dependency>
-           		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${google.code.gson.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.googlecode.json-simple.wso2</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>${com.googlecode.json-simple.wso2.version}</version>
@@ -60,7 +60,12 @@
 			<artifactId>json</artifactId>
 			<version>${org.json.wso2.version}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
@@ -72,8 +77,8 @@
 		<google.code.gson.version>2.3.1</google.code.gson.version>
 		<com.googlecode.json-simple.wso2.version>1.1.wso2v1</com.googlecode.json-simple.wso2.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
-		
-		
+
+
 	</properties>
 
 	<repositories>
