--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -40,6 +40,12 @@
        <artifactId>msf4j-analytics</artifactId>
     </dependency>
     -->
+    
+    	<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.2</version>
+			</dependency>
     </dependencies>
 
     <properties>
