--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -1,15 +1,16 @@
 database:
   driverClass: com.mysql.jdbc.Driver
-  user: <user>
-  password: <pwd>
-  url: jdbc:mysql://localhost/<db>
+  user: root
+  password: root
+  url: jdbc:mysql://localhost/tokenservice
 host: localhost
-server:
-applicationConnectors:
-- type: http
+port: 8080
+#server:
+#applicationConnectors:
+#- type: http
 # The port the application will listen on
-port: 8181
-adminConnectors:
-- type: http
+#port: 8181
+#adminConnectors:
+#- type: http
 # The admin port
-port: 8282
+#port: 8282
