--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -116,7 +116,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.wso2telco.dep.service.conf.Appinitializer</mainClass>
+									<mainClass>com.wso2telco.dep.tpservice.conf.Appinitializer</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
