adding server port and admin port to yml

--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -5,12 +5,12 @@ database:
   url: jdbc:mysql://localhost/tokenservice
 host: localhost
 port: 8080
-#server:
-#applicationConnectors:
-#- type: http
-# The port the application will listen on
-#port: 8181
-#adminConnectors:
-#- type: http
-# The admin port
-#port: 8282
+server:
+        applicationConnectors:
+          - type: http
+                # The port the application will listen on
+            port: 8181
+        adminConnectors:
+          - type: http
+                # The admin port
+            port: 8282
