--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -75,6 +75,17 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
+		<dependency>
+	    	<groupId>com.google.code.gson</groupId>
+	    	<artifactId>gson</artifactId>
+	    	<version>2.6.2</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
