refactord the token pool

--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -1,5 +1,5 @@
 database:
-  driverClass: com.mysql.jdbc.Driver
+  driverClass: com.mysql.cj.jdbc.Driver
   user: root
   password: root
   url: jdbc:mysql://localhost/tokenservice
