add propaties to yml

--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -2,7 +2,7 @@ database:
   driverClass: com.mysql.cj.jdbc.Driver
   user: root
   password: root
-  url: jdbc:mysql://localhost/tokenservice
+  url: jdbc:mysql://127.0.0.1/token_service?useSSL=false
 host: localhost
 port: 8080
 server:
@@ -14,3 +14,9 @@ server:
           - type: http
                 # The admin port
             port: 8282
+waitingTimeForToken: 400 #times in milliseconds ,default time is 200 ms
+retryAttempt: 4 #Number of attempts for getting valid token 
+isMaster: true #server mode (master/slave)
+tokenReadretrAttempts: #Number of re-try attemts for waiting for getting valid token.this value is used only in slave mode
+tokenReadretrAfter: 120000 #Number of ms read db for valid token ,default is 1 min.this value is used only in slave mode
+
