--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -19,4 +19,10 @@ retryAttempt: 4 #Number of attempts for getting valid token
 isMaster: true #server mode (master/slave)
 tokenReadretrAttempts: #Number of re-try attemts for waiting for getting valid token.this value is used only in slave mode
 tokenReadretrAfter: 120000 #Number of ms read db for valid token ,default is 1 min.this value is used only in slave mode
-
+logging:
+  level: DEBUG
+  appenders:
+    - type: console
+      threshold: ALL
+      timeZone: UTC
+      target: stdout
