--- a/token-pool-service/deploy/config.yml
+++ b/token-pool-service/deploy/config.yml
@@ -3,13 +3,12 @@ database:
   user: root
   password: root
   url: jdbc:mysql://127.0.0.1/token_service?useSSL=false
-host: localhost
-port: 8080
 server:
         applicationConnectors:
           - type: http
                 # The port the application will listen on
             port: 8181
+            bindHost: localhost
         adminConnectors:
           - type: http
                 # The admin port
