introduce parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<!--groupId>org.wso2.carbon.identity</groupId> <artifactId>carbon-identity</artifactId> 
-		<packaging>pom</packaging> <version>5.0.8-SNAPSHOT</version> <name>WSO2 Carbon 
-		- Platform Aggregator Pom</name> <url>http://wso2.org</url -->
-	<parent>
+	<!--parent>
        		<groupId>org.wso2</groupId>
        		<artifactId>wso2</artifactId>
        		<version>1</version>
-   	</parent>
+   	</parent-->
 	<groupId>com.wso2telco.services.dep</groupId>
 	<artifactId>services-dep</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.14-SNAPSHOT</version>
+	<version>1.0.00-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -37,36 +34,12 @@
 		<maven>3.0.0</maven>
 	</prerequisites>
 	
-	<distributionManagement>
-                <snapshotRepository>
-                        <id>wso2Telco.snapshots</id>
-                        <name>Snapshot repo</name>
-                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <!-- Publish the versioned releases here -->
-                <repository>
-                        <id>wso2telco.releases</id>
-                        <name>release repo</name>
-                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
-                </repository>
-        </distributionManagement>
-
-	
 	<modules>
 		<module>token-pool-service</module>
 		<module>feature/token.pool.service.feature</module>
                
 		
 	</modules>
-
-	<scm>
-		<url>https://github.com/WSO2Telco/services-dep.git</url>
-		<developerConnection>scm:git:https://github.com/WSO2Telco/services-dep.git</developerConnection>
-		<connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
-		<tag>HEAD</tag>
-	</scm>
-
-
 
     <build>
      
