--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -9,9 +9,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.wso2telco.dep.services</groupId>
+	<parent>
+		<groupId>com.wso2telco.services.dep</groupId>
+	        <artifactId>services-dep-parent</artifactId>
+       		<version>${com.wso2telco.dep.services.version}</version>
+ 		<relativePath>../parent/pom.xml</relativePath>
+   	</parent>
 	<artifactId>token-pool-service</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>WSO2Telco - token pool service</name>
 
 	<packaging>jar</packaging>
@@ -21,7 +25,6 @@
 		<dropwizard.swagger.version>0.6</dropwizard.swagger.version>
 		<metrics.version>3.1.0</metrics.version>
 		<mysql.version>6.0.2</mysql.version>
-		<com.google.guava.version>19.0</com.google.guava.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,12 +88,6 @@
 	    	<groupId>com.google.code.gson</groupId>
 	    	<artifactId>gson</artifactId>
 	    	<version>2.6.2</version>
-		</dependency>
-				<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${com.google.guava.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
