--- a/feature/token.pool.service.feature/pom.xml
+++ b/feature/token.pool.service.feature/pom.xml
@@ -2,13 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-	<parent>
-       		<groupId>org.wso2</groupId>
-       		<artifactId>wso2</artifactId>
-       		<version>1</version>
-   	</parent>
-  <groupId>com.wso2telco</groupId>
-  <artifactId>token-pool-service</artifactId>
+  <parent>
+                <groupId>com.wso2telco.services.dep</groupId>
+                <artifactId>services-dep-parent</artifactId>
+                <version>1.0.00-SNAPSHOT</version>
+                <relativePath>../../parent/pom.xml</relativePath>
+        </parent>
+  
+
+  <artifactId>token-pool-service-feature</artifactId>
 
   <packaging>pom</packaging>
   <name>token-pool-service</name>
