--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.wso2telco.services.dep</groupId>
 	<artifactId>services-dep-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>${com.wso2telco.dep.services.version}</version>
+	<version>1.0.00-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -31,9 +31,9 @@
 			<email>core-product-tech@wso2telco.com</email>
 		</developer>
 	</developers>
-	<properties>
+	<!--properties>
         	<com.wso2telco.dep.services.version>1.0.00-SNAPSHOT</com.wso2telco.dep.services.version>
-        </properties>
+        </properties-->
 
 	<prerequisites>
 		<maven>3.0.0</maven>
@@ -44,5 +44,88 @@
                 <connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
                 <tag>HEAD</tag>
         </scm>
+
+<pluginRepositories>
+                <pluginRepository>
+                        <id>wso2telco-nexus</id>
+                        <name>WSO2Telco internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/groups/public/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </pluginRepository>
+                <pluginRepository>
+                        <id>wso2telco.releases</id>
+                        <name>WSO2 internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </pluginRepository>
+                <pluginRepository>
+                        <id>wso2Telco.snapshots</id>
+                        <name>WSO2Telco Snapshot Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots/</url>
+                        <snapshots>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                        </snapshots>
+                        <releases>
+                                <enabled>false</enabled>
+                        </releases>
+                </pluginRepository>
+        </pluginRepositories>
+
+
+ <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+                <dependencies>
+                <dependency>
+                    <groupId>org.apache.maven.scm</groupId>
+                    <artifactId>maven-scm-provider-gitexe</artifactId>
+                    <version>1.9</version>
+                </dependency>
+            </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+            <!--plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>docs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin-->
+        </plugins>
+    </build>
 	
 </project>
