--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.wso2telco.services.dep</groupId>
 	        <artifactId>services-dep-parent</artifactId>
-       		<version>${com.wso2telco.dep.services.version}</version>
+       		<version>1.0.00-SNAPSHOT</version>
  		<relativePath>../parent/pom.xml</relativePath>
    	</parent>
 	<artifactId>token-pool-service</artifactId>
