--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,12 @@
 		
 	</modules>
 
+  <scm>
+                <url>https://github.com/WSO2Telco/services-dep.git</url>
+                <developerConnection>scm:git:https://github.com/WSO2Telco/services-dep.git</developerConnection>
+                <connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
+                <tag>HEAD</tag>
+        </scm>
+
 
 </project>
