--- a/feature/token.pool.service.feature/pom.xml
+++ b/feature/token.pool.service.feature/pom.xml
@@ -5,7 +5,7 @@
   <parent>
                 <groupId>com.wso2telco.services.dep</groupId>
                 <artifactId>services-dep-parent</artifactId>
-                <version>1.0.00-SNAPSHOT</version>
+                <version>${com.wso2telco.dep.services.version}</version>
                 <relativePath>../../parent/pom.xml</relativePath>
         </parent>
   
