--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
 	the specific language governing permissions and limitations under the License.
    folk test M	-->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<!--parent>
@@ -17,7 +19,7 @@
        		<version>1</version>
    	</parent-->
 	<groupId>com.wso2telco.services.dep</groupId>
-	<artifactId>services-dep</artifactId>
+	<artifactId>services-dep-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.00-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
@@ -29,24 +31,101 @@
 			<email>core-product-tech@wso2telco.com</email>
 		</developer>
 	</developers>
+	<!--properties>
+        	<com.wso2telco.dep.services.version>1.0.00-SNAPSHOT</com.wso2telco.dep.services.version>
+        </properties-->
 
 	<prerequisites>
 		<maven>3.0.0</maven>
 	</prerequisites>
-	
-	<modules>
-		<module>token-pool-service</module>
-		<module>feature/token.pool.service.feature</module>
-               
-		
-	</modules>
-
-  <scm>
+   <scm>
                 <url>https://github.com/WSO2Telco/services-dep.git</url>
                 <developerConnection>scm:git:https://github.com/WSO2Telco/services-dep.git</developerConnection>
                 <connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
                 <tag>HEAD</tag>
         </scm>
 
+<pluginRepositories>
+                <pluginRepository>
+                        <id>wso2telco-nexus</id>
+                        <name>WSO2Telco internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/groups/public/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </pluginRepository>
+                <pluginRepository>
+                        <id>wso2telco.releases</id>
+                        <name>WSO2 internal Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
+                        <releases>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                                <checksumPolicy>ignore</checksumPolicy>
+                        </releases>
+                </pluginRepository>
+                <pluginRepository>
+                        <id>wso2Telco.snapshots</id>
+                        <name>WSO2Telco Snapshot Repository</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots/</url>
+                        <snapshots>
+                                <enabled>true</enabled>
+                                <updatePolicy>daily</updatePolicy>
+                        </snapshots>
+                        <releases>
+                                <enabled>false</enabled>
+                        </releases>
+                </pluginRepository>
+        </pluginRepositories>
 
+
+ <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+                <dependencies>
+                <dependency>
+                    <groupId>org.apache.maven.scm</groupId>
+                    <artifactId>maven-scm-provider-gitexe</artifactId>
+                    <version>1.9</version>
+                </dependency>
+            </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+            <!--plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>docs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin-->
+        </plugins>
+    </build>
+	
 </project>
