--- a/token-pool-service/pom.xml
+++ b/token-pool-service/pom.xml
@@ -13,7 +13,7 @@
 		<groupId>com.wso2telco.services.dep</groupId>
 	        <artifactId>services-dep-parent</artifactId>
        		<version>${com.wso2telco.dep.services.version}</version>
- 		<relativePath>../parent/pom.xml</relativePath>
+ 		<relativePath>../pom.xml</relativePath>
    	</parent>
 	<artifactId>token-pool-service</artifactId>
 	<name>WSO2Telco - token pool service</name>
