[maven-release-plugin] prepare release v1_0_0-rc2

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
 	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
 	the specific language governing permissions and limitations under the License. 
 	folk test M -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<!--parent> <groupId>org.wso2</groupId> <artifactId>wso2</artifactId> <version>1</version> 
@@ -17,7 +16,7 @@
 	<groupId>com.wso2telco.services.dep</groupId>
 	<artifactId>services-dep-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.00-SNAPSHOT</version>
+	<version>1.0.0-RC2</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -37,7 +36,7 @@
 		<url>https://github.com/WSO2Telco/services-dep.git</url>
 		<developerConnection>scm:git:https://github.com/WSO2Telco/services-dep.git</developerConnection>
 		<connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
-		<tag>HEAD</tag>
+		<tag>v1_0_0-rc2</tag>
 	</scm>
 	<repositories>
 		<repository>
