--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,19 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
+	<distributionManagement>
+                <snapshotRepository>
+                        <id>wso2Telco.snapshots</id>
+                        <name>Snapshot repo</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <!-- Publish the versioned releases here -->
+                <repository>
+                        <id>wso2telco.releases</id>
+                        <name>release repo</name>
+                        <url>http://maven.wso2telco.com/nexus/content/repositories/releases/</url>
+                </repository>
+        </distributionManagement>
 
 
 	<build>
