--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<groupId>com.wso2telco.services.dep</groupId>
 	<artifactId>services-dep-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0-rc10</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
