[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<groupId>com.wso2telco.services.dep</groupId>
 	<artifactId>services-dep-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0-RC2</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -41,7 +41,7 @@
 		<url>https://github.com/WSO2Telco/services-dep.git</url>
 		<developerConnection>scm:git:https://github.com/WSO2Telco/services-dep.git</developerConnection>
 		<connection>scm:git:https://github.com/WSO2Telco/services-dep.git</connection>
-		<tag>v1_0_0_RC2</tag>
+		<tag>v1_0_0-rc1</tag>
 	</scm>
 	<repositories>
 		<repository>
