--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -47,6 +47,16 @@
 			<version>${com.wso2telco.dep.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>msisdn-validator</artifactId>
+			<version>${com.wso2telco.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>dbutils</artifactId>
+			<version>${com.wso2telco.core.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${google.code.gson.version}</version>
@@ -76,10 +86,11 @@
 
 	<properties>
 		<microservice.mainClass>com.wso2telco.services.dep.sandbox.service.Application</microservice.mainClass>
-		<org.hibernate.version>5.1.0.Final</org.hibernate.version>
+		<org.hibernate.version>4.3.11.Final</org.hibernate.version>
 		<mysql.version>5.1.6</mysql.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
 		<com.wso2telco.dep.version>1.8.0-SNAPSHOT</com.wso2telco.dep.version>
+		<com.wso2telco.core.version>2.0.03-SNAPSHOT</com.wso2telco.core.version>
 		<google.code.gson.version>2.3.1</google.code.gson.version>
 		<com.googlecode.json-simple.wso2.version>1.1.wso2v1</com.googlecode.json-simple.wso2.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
