--- a/dep-sandbox/deploy/config.yml
+++ b/dep-sandbox/deploy/config.yml
@@ -13,12 +13,12 @@ server:
           - type: http
                 # The admin port
             port: 8282
-waitingTimeForToken: 400 #times in milliseconds ,default time is 200 ms
-retryAttempt: 4 #Number of attempts for getting valid token 
-isMaster: true #server mode (master/slave)
-tokenReadretrAttempts: #Number of re-try attemts for waiting for getting valid token.this value is used only in slave mode
-tokenReadretrAfter: 120000 #Number of ms read db for valid token ,default is 1 min.this value is used only in slave mode
-refreshWakeUpLeadTime: 5000 #lead time to wake-up Token refresh process default is 5000 ms
+#waitingTimeForToken: 400 #times in milliseconds ,default time is 200 ms
+#retryAttempt: 4 #Number of attempts for getting valid token 
+#isMaster: true #server mode (master/slave)
+#tokenReadretrAttempts: #Number of re-try attemts for waiting for getting valid token.this value is used only in slave mode
+##tokenReadretrAfter: 120000 #Number of ms read db for valid token ,default is 1 min.this value is used only in slave mode
+#refreshWakeUpLeadTime: 5000 #lead time to wake-up Token refresh process default is 5000 ms
 logging:
   level: INFO
   loggers:
