--- a/dep-sandbox/deploy/config.yml
+++ b/dep-sandbox/deploy/config.yml
@@ -2,7 +2,7 @@ database:
   driverClass: com.mysql.cj.jdbc.Driver
   user: root
   password: root
-  url: jdbc:mysql://127.0.0.1/dev2_mife_sandbox_hub?useSSL=false
+  url: jdbc:mysql://127.0.0.1/mife_sandbox?useSSL=false
 server:
         applicationConnectors:
           - type: http
