--- a/feature/sandbox/pom.xml
+++ b/feature/sandbox/pom.xml
@@ -5,7 +5,7 @@
   <parent>
                 <groupId>com.wso2telco.services.dep</groupId>
                 <artifactId>services-dep-parent</artifactId>
-                <version>1.0.6-SNAPSHOT</version>
+                <version>1.0.8</version>
                 <relativePath>../../pom.xml</relativePath>
         </parent>
   
