--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -85,7 +85,7 @@
 		<mysql.version>6.0.2</mysql.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
 		<com.wso2telco.dep.version>1.8.0-M3</com.wso2telco.dep.version>
-		<com.wso2telco.core.version>2.0.3-SNAPSHOT</com.wso2telco.core.version>
+		<com.wso2telco.core.version>2.0.3</com.wso2telco.core.version>
 		<google.code.gson.version>2.3.1</google.code.gson.version>
 		<com.googlecode.json-simple.wso2.version>1.1.wso2v1</com.googlecode.json-simple.wso2.version>
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
