--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>com.wso2telco.services.dep</groupId>
 		<artifactId>services-dep-parent</artifactId>
-		<version>1.1.0.1</version>
+		<version>1.1.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
