--- a/dep-sandbox/deploy/config.yml
+++ b/dep-sandbox/deploy/config.yml
@@ -37,3 +37,5 @@ logging:
       archivedLogFilenamePattern: log/sandbox_service-%d.log #<path to log file >/< archive filename.log>
       archivedFileCount: 5
       timeZone: UTC
+      
+requestIdentifierSize: 6
