--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "material-design-icons": "^3.0.1",
     "ng2-bootstrap": "^1.3.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
@@ -41,6 +42,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "node-sass": "^4.5.0",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
