--- a/sandbox-ui/package.json
+++ b/sandbox-ui/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "material-design-icons": "^3.0.1",
     "ng2-bootstrap": "^1.3.3",
+    "ng2-slim-loading-bar": "^2.3.0",
+    "ng2-toasty": "^2.3.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
