bundling assert folder

--- a/dep-sandbox/pom.xml
+++ b/dep-sandbox/pom.xml
@@ -139,6 +139,10 @@
 					<include>hibernate.cfg.xml</include>
 				</includes>
 			</resource>
+			 <resource>
+			        <directory>src/main/resources</directory>
+			 </resource>
+
 		</resources>
 
 		<plugins>
